--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,6 +3,8 @@
 //@import "partials/jquery.fancybox.min.css";
 @import "partials/slick.css";
 @import "partials/ion.rangeSlider.min.css";
+@import "partials/select2.css";
+@import "partials/simplebar.css";
 
 /* my style */
 
@@ -16,4 +18,6 @@
 @import "partials/main-adaptive";
 @import "partials/homepage.scss";
 @import "partials/about-company.scss";
+@import "partials/contacts.scss";
+@import "partials/catalog.scss";
 
