--- a/src/views/sections/clients-types.pug
+++ b/src/views/sections/clients-types.pug
@@ -6,11 +6,11 @@ section.clients-types
 			.clients-type-front__name Собственнику
 		.clients-type-hidden
 			.clients-type-hidden__top 
-				.clients-type-hidden__top-name Собственнику
+				a.clients-type-hidden__top-name(href="") Собственнику
 				img.clients-type-hidden__top-bg(src="images/main/clients-types/back.jpg", alt="")
 			.clients-type-hidden__bottom 
-				.clients-type-hidden__btn Сдать
-				.clients-type-hidden__btn.clients-type-hidden__btn--light Продать
+				a.clients-type-hidden__btn(href="") Сдать
+				a.clients-type-hidden__btn.clients-type-hidden__btn--light(href="") Продать
 	.clients-type
 		.clients-type-front
 			.clients-type-front__icon 
@@ -18,11 +18,11 @@ section.clients-types
 			.clients-type-front__name Арендатору
 		.clients-type-hidden
 			.clients-type-hidden__top 
-				.clients-type-hidden__top-name Арендатору
+				a.clients-type-hidden__top-name(href="") Арендатору
 				img.clients-type-hidden__top-bg(src="images/main/clients-types/back.jpg", alt="")
 			.clients-type-hidden__bottom 
-				.clients-type-hidden__btn Снять
-				.clients-type-hidden__btn.clients-type-hidden__btn--light Сдать
+				a.clients-type-hidden__btn(href="") Снять
+				a.clients-type-hidden__btn.clients-type-hidden__btn--light(href="") Сдать
 	.clients-type
 		.clients-type-front
 			.clients-type-front__icon 
@@ -30,8 +30,8 @@ section.clients-types
 			.clients-type-front__name Инвестору
 		.clients-type-hidden
 			.clients-type-hidden__top 
-				.clients-type-hidden__top-name Инвестору
+				a.clients-type-hidden__top-name(href="") Инвестору
 				img.clients-type-hidden__top-bg(src="images/main/clients-types/back.jpg", alt="")
 			.clients-type-hidden__bottom 
-				.clients-type-hidden__btn Купить
-				.clients-type-hidden__btn.clients-type-hidden__btn--light Купить с партнерами
+				a.clients-type-hidden__btn(href="") Купить
+				a.clients-type-hidden__btn.clients-type-hidden__btn--light(href="") Купить с партнерами
