--- a/src/style/partials/homepage.scss
+++ b/src/style/partials/homepage.scss
@@ -163,6 +163,7 @@
 }
 
 .clients-type {
+	cursor: pointer;
 	width: 215px;
 	flex-grow: 1;
 	padding: 40px 5px;
@@ -382,15 +383,31 @@
 	z-index: 2;
 	padding: 64px;
 	background: #F5F5F5;
+	&__connect{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		
+		margin-top: 21px;
+		&-text{
+			color: #9e9e9e;
+			font-size: 14px;
+			line-height: 145%;
+			margin-right: 10px;
+			
+		}
+	}
 	&--no-mt{
 		margin-top: 0;
 	}
 	&__confid{
-		text-align: center;
+		
 		color: #9E9E9E;
 		font-size: 14px;
 		line-height: 145%;
 		margin-top: 21px;
+		display: flex;
+		justify-content: center;
 	}
 	&-wrap{
 		margin-left: -12px;
@@ -420,6 +437,7 @@
 		line-height: 145%;
 		display: none;
 		color: red;
+		margin-top: 21px;
 		&--onerror{
 			display: block;
 		}
